--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
     "axios": "^0.26.0",
+    "leaflet": "^1.7.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-infinite-scroll-component": "^6.1.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-leaflet": "^3.2.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.9",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "eslint": "8.9.0",
